@@ -1,3 +1,6 @@
+Unreleased
+	* Fix output encoding for Python 3.8
+
 Version 2.0.2 Thu Jun 11 2020 by luispedro
 	* Fix jug argument parsing
 
